nginx/nginx-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-ingressroute
  namespace: nginx
spec:
  entryPoints:
  - websecure
  routes:
    - match: Host(`nginx.k8s.local`) || Host(`nginx.k8s.bavaria-group.ru`)
      kind: Rule
      services:
      - name: nginx
        port: 80
#  tls:
#    secretName: tls-secret
